--- a/src/css/todos.css
+++ b/src/css/todos.css
@@ -54,7 +54,7 @@
 }
 
 .list-content>.list-text {
-	width: 96%;
+	width: 92%;
 }
 
 .list-text>label {
@@ -66,11 +66,57 @@ label>.iradio_square-green {
 	margin-right: 10px;
 }
 
-.btn-remove-todo {
+.btn-action-todo {
 	color: #B0B0B0;
 }
 
-.btn-remove-todo:hover {
+.btn-action-todo .remove-icon:hover {
 	color: red;
 	cursor: pointer;
+}
+
+.btn-action-todo .edit-icon {
+  font-size: 17px;
+  margin-right: 5px;
+}
+
+.btn-action-todo .edit-icon:hover {
+  color: #1B7E5A;
+}
+
+.edit-field {
+  position: relative;
+  border-bottom: 1px solid #F5F5F5;
+  padding: 10px;
+}
+.edit-field input {
+  width: 100%;
+  padding: 5px 10px;
+  border: 1px solid  #DDDDDD;
+}
+.edit-field input:focus {
+  outline: none !important;
+  border:1px solid #1B7E5A;
+  box-shadow: 0 0 10px #719ECE;
+}
+.edit-field i {
+  position: absolute;
+  font-size: 18px;
+  top: 22px;
+}
+.edit-field > i.fa.fa-check.fa-lg {
+  right: 15px;
+}
+.edit-field > i.fa.fa-check.fa-lg:hover {
+  color: #1B7E5A;
+}
+.edit-field > i.fa.fa-times.fa-lg {
+  right: 40px;
+}
+.edit-field > i.fa.fa-times.fa-lg:hover {
+  color: red;
+}
+
+i:hover {
+  cursor: pointer;
 }
